--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -32,6 +32,7 @@
     <%# /支払額の表示 %>
 
     <%= form_with url: item_orders_path, model: @order_purchase, id: 'charge-form', class: 'transaction-form-wrap',local: true do |f| %>
+    <%= render 'shared/error_messages', model: f.object %>
       <%# カード情報の入力 %>
       <div class='credit-card-form'>
         <h1 class='info-input-haedline'>
@@ -42,7 +43,8 @@
             <label class="form-text">カード情報</label>
             <span class="indispensable">必須</span>
           </div>
-          <%= f.text_field :hoge, class:"input-default", id:"card-number", placeholder:"カード番号", maxlength:"16" %>
+          <div id="number-form" class="input-default"></div>
+          <%#= f.text_field :hoge, class:"input-default", id:"card-number", placeholder:"カード番号", maxlength:"16" %>
           <div class='available-card'>
             <%= image_tag 'card-visa.gif', class: 'card-logo'%>
             <%= image_tag 'card-mastercard.gif', class: 'card-logo'%>
@@ -55,14 +57,16 @@
             <label class="form-text">有効期限</label>
             <span class="indispensable">必須</span>
           </div>
-          <%= f.text_area :hoge, class:"input-default", id:"card-exp", placeholder:"月/年" %>
+          <%#= f.text_area :hoge, class:"input-default", id:"card-exp", placeholder:"月/年" %>
+          <div id="expiry-form" class="input-default"></div>
         </div>
         <div class="form-group">
           <div class='form-text-wrap'>
             <label class="form-text">セキュリティコード</label>
             <span class="indispensable">必須</span>
           </div>
-          <%= f.text_field :hoge, class:"input-default", id:"card-cvc", placeholder:"CVC", maxlength:"4" %>
+          <%#= f.text_field :hoge, class:"input-default", id:"card-cvc", placeholder:"CVC", maxlength:"4" %>
+          <div id="cvc-form" class="input-default"></div>
         </div>
       </div>
       <%# /カード情報の入力 %>
